# kubebuilder

./: .gitattributes  .gitignore  .golangci.yml  .mergify.yaml  .mergify.yml  .projectile  .travis.yml  .yamllint  .yamllint-helm  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  DESIGN.md  FEATURE_GATES.md  Gopkg.toml  Makefile  OWNERS  OWNERS_ALIASES  README.md  RELEASE.md  SECURITY_CONTACTS  VERSIONING.md  WORKSPACE  check_testdata.sh  codecov.yml  common.sh  demo.cast  diff.txt  doc.go  e -i HEAD~1  e2e.md  generate_golden.sh  generate_testdata.sh  generate_vendor.sh  generated_golden.sh  go.mod  go.sum  golden_test.sh  lint-testdata.sh  main.go  (+11 more)
cmd/: BUILD.bazel  Gopkg.toml  alpha.go  api.go  cmd.go  completion.go  create.go  docs.go  edit.go  go_version_test.go  init.go  init_project.go  main.go  root.go  update.go  vendor_update.go  version.go  version_test.go  webhook.go  webhook_v1.go  webhook_v2.go
cmd/alpha/: alpha.go
cmd/alpha/webhookv1/: webhook_v1.go
cmd/controller-gen/: main.go
cmd/controller-gen/codegen/: generators.go
cmd/create/: create.go
cmd/create/api/: api.go
cmd/create/webhookv2/: webhook_v2.go
cmd/init/: go_version_test.go  init_project.go
cmd/internal/: config.go  go_version.go  go_version_test.go  stdin.go
cmd/internal/codegen/: types.go
cmd/internal/dependencies/: errors.go  go_version.go  go_version_test.go  kustomize.go  regexp.go  semantic_version.go
cmd/kubebuilder/: alpha.go  api.go  docs.go  init_project.go  main.go  vendor_update.go  webhook.go
cmd/kubebuilder-gen/: main.go
cmd/kubebuilder-gen/codegen/: generators.go
cmd/kubebuilder/create/: create.go
cmd/kubebuilder/docs/: docs.go  gen.go
cmd/kubebuilder/generate/: generate.go
cmd/kubebuilder/initproject/: apis.go  apiserver.go  bazel.go  controller.go  dep_manifest.go  dockerfile.go  dummyimports.go  empty_package.go  init.go  inject.go  installer.go  project.go  vendor.go  vendor_test.go
cmd/kubebuilder/run/: local.go
cmd/kubebuilder/update/: update.go  vendor.go
cmd/kubebuilder/util/: stdin.go  util.go
cmd/kubebuilder/v0/: commands.go
cmd/kubebuilder/v1/: api.go  commands.go  docs.go  vendor_update.go  webhook.go
cmd/kubebuilder/version/: version.go
cmd/update/: vendor_update.go
cmd/util/: BUILD.bazel  util.go  validations.go
cmd/version/: BUILD.bazel  version.go
pkg/scaffold/: BUILD.bazel  api.go  edit.go  init.go  interface.go  output.go  pattern.go  project.go  scaffold.go  scaffold_suite_test.go  scaffold_test.go  update.go  versions.go  webhook.go
pkg/scaffold/controller/: BUILD.bazel  add.go  controller.go  controller_test.go  controllersuitetest.go  controllertest.go
pkg/scaffold/files/: boilerplate.go  project.go
pkg/scaffold/input/: BUILD.bazel  input.go  input_suite_test.go  input_test.go
pkg/scaffold/manager/: BUILD.bazel  cmd.go  config.go  dockerfile.go  manager_suite_test.go  manager_test.go
pkg/scaffold/project/: BUILD.bazel  authproxyrole.go  authproxyrolebinding.go  authproxyservice.go  boilerplate.go  gitignore.go  gopkg.go  kustomize.go  kustomize_auth_proxy_patch.go  kustomize_image_patch.go  kustomize_manager_base.go  kustomize_metrics_patch.go  kustomize_rbac_base.go  kustomize_resources_patch.go  makefile.go  project.go  project_suite_test.go  project_test.go  type.go
pkg/scaffold/resource/: BUILD.bazel  addtoscheme.go  authproxyrole.go  authproxyrolebinding.go  authproxyservice.go  crd.go  crd_sample.go  crd_status.go  doc.go  group.go  register.go  resource.go  resource_suite_test.go  resource_test.go  role.go  rolebinding.go  types.go  typestest.go  version_suitetest.go
pkg/scaffold/scaffoldtest/: BUILD.bazel  scaffoldtest.go
pkg/scaffold/util/: util.go
pkg/scaffold/v1/: authproxyservice.go  kustomize_image_patch.go
pkg/scaffold/v2/: authproxyrole.go  authproxyrolebinding.go  authproxyservice.go  controller.go  controller_suitetest.go  crd_editor_rbac.go  crd_sample.go  crd_viewer_rbac.go  custom_resource.go  doc.go  dockerfile.go  gitignore.go  gomod.go  gopkg.go  group.go  kustomize.go  kustomize_image_patch.go  leaderelectionrole.go  leaderelectionrolebinding.go  main.go  makefile.go  mgrrolebinding.go  rbac.go  resource_doc.go  string_utils.go  string_utils_test.go  types.go  typestest.go  version_suitetest.go  webhook_manager_patch.go
pkg/scaffold/webhook/: BUILD.bazel  add_admissionbuilder_handler.go  add_server.go  admissionbuilder.go  admissionhandler.go  admissionwebhooks.go  server.go  webhook_suite_test.go  webhook_test.go
test/e2e/: BUILD.bazel  ci.sh  common.go  config.go  coverage.sh  doc.go  e2e.go  e2e_suite_test.go  e2e_test.go  e2e_v0.go  e2e_v1.go  e2e_v2.go  e2ev1.go  generate_test.go  kind-config-v1.18.yaml  kind-config-v1.19.yaml  kind-config.yaml  kubebuildertest.go  kubectl.go  local.sh  plugin_cluster_test.go  setup.sh  suite_test.go  test_context.go  util.go  v2_cluster_test.go  v3_cluster_test.go
test/e2e/all/: e2e_suite_test.go  plugin_deployimage_test.go  plugin_helm_test.go  plugin_multicluster_test.go  plugin_serversideapply_test.go  plugin_v4_test.go
test/e2e/alphagenerate/: e2e_suite_test.go  generate_test.go  generate_v4_multigroup_test.go  generate_v4_test.go  generate_v4_with_plugins_test.go
test/e2e/alphaupdate/: e2e_suite_test.go  update_test.go
test/e2e/common/: common_suite_test.go  default_scaffold_test.go
test/e2e/deployimage/: e2e_suite_test.go  generate_test.go  plugin_cluster_test.go
test/e2e/e2e-ehon/: Dockerfile  Makefile  PROJECT
test/e2e/e2e-nkrw/: Dockerfile  Makefile  PROJECT
test/e2e/externalplugin/: e2e_suite_test.go  generate_test.go
test/e2e/featuregates/: featuregates_test.go
test/e2e/framework/: BUILD.bazel  test_context.go  util.go
test/e2e/grafana/: e2e_suite_test.go  generate_test.go
test/e2e/helm/: chart_consistency_integration_test.go  e2e_suite_test.go  generate_test.go  plugin_cluster_test.go
test/e2e/helpers/: generate_v4.go  plugin_test_helper.go  plugin_test_metrics.go
test/e2e/multimodule/: e2e_suite_test.go  plugin_cluster_test.go
test/e2e/scaffold/: webhook.go
test/e2e/utils/: addons.go  kubectl.go  (+6 more)
(+4951 files in other folders)
