load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "pattern.go",
        "scaffold.go",
    ],
    importpath = "sigs.k8s.io/kubebuilder/pkg/scaffold",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/scaffold/input:go_default_library",
        "//vendor/golang.org/x/tools/imports:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
        "//vendor/sigs.k8s.io/controller-tools/pkg/util:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "scaffold_suite_test.go",
        "scaffold_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
