load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "add.go",
        "controller.go",
        "controllersuitetest.go",
        "controllertest.go",
    ],
    importpath = "sigs.k8s.io/kubebuilder/pkg/scaffold/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/scaffold/input:go_default_library",
        "//pkg/scaffold/resource:go_default_library",
        "//vendor/github.com/markbates/inflect:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "controller_suite_test.go",
        "controller_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/scaffold/input:go_default_library",
        "//pkg/scaffold/resource:go_default_library",
        "//pkg/scaffold/scaffoldtest:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
