load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "boilerplate.go",
        "gitignore.go",
        "gopkg.go",
        "kustomize.go",
        "kustomize_image_patch.go",
        "kustomize_metrics_patch.go",
        "kustomize_resources_patch.go",
        "makefile.go",
        "project.go",
    ],
    importpath = "sigs.k8s.io/kubebuilder/pkg/scaffold/project",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/scaffold:go_default_library",
        "//pkg/scaffold/input:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "project_suite_test.go",
        "project_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/scaffold:go_default_library",
        "//pkg/scaffold/input:go_default_library",
        "//pkg/scaffold/scaffoldtest:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
