load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["scaffoldtest.go"],
    importpath = "sigs.k8s.io/kubebuilder/pkg/scaffold/scaffoldtest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/scaffold:go_default_library",
        "//pkg/scaffold/input:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
