load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["wrapper.go"],
    importpath = "sigs.k8s.io/kubebuilder/test/e2e/framework/ginkgowrapper",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/onsi/ginkgo:go_default_library"],
)
