load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_mutating_firstmate.go",
        "add_mutating_namespace.go",
        "add_validating_frigate.go",
        "add_validating_kraken.go",
        "server.go",
    ],
    importpath = "sigs.k8s.io/kubebuilder/test/project/pkg/webhook/default_server",
    visibility = ["//visibility:public"],
    deps = [
        "//test/project/pkg/webhook/default_server/firstmate/mutating:go_default_library",
        "//test/project/pkg/webhook/default_server/frigate/validating:go_default_library",
        "//test/project/pkg/webhook/default_server/kraken/validating:go_default_library",
        "//test/project/pkg/webhook/default_server/namespace/mutating:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/log:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/webhook:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/webhook/admission:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/webhook/admission/builder:go_default_library",
    ],
)
