load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "namespace_update_handler.go",
        "update_webhook.go",
        "webhooks.go",
    ],
    importpath = "sigs.k8s.io/kubebuilder/test/project/pkg/webhook/default_server/namespace/mutating",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/k8s.io/api/admissionregistration/v1beta1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/inject:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/webhook/admission:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/webhook/admission/builder:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/webhook/admission/types:go_default_library",
    ],
)
